--- a/client/views/layouts/main.html
+++ b/client/views/layouts/main.html
@@ -68,7 +68,7 @@
   <!-- /SUBMIT JOB -->
 
   <!-- SHIFT PROFILE -->
-  {{#if canViewRoster}}
+  {{#if canEditRoster}}
   <div class="modal fade" id="shiftProfile" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <!-- {{> shiftProfile}} -->
     {{> render component='shiftProfile'}}
