Fixed job items list displaying

--- a/client/views/main_views/jobitems/list_view.html
+++ b/client/views/main_views/jobitems/list_view.html
@@ -15,15 +15,13 @@
           </ul>
 
           <div class="tab-content">
-
             {{#each jobTypes}}
-              <div class="tab-pane jobtypepanes" id="{{_id}}">
+              <div class="tab-pane jobtypepanes {{#if equal name "Prep"}}active{{/if}}" id="{{_id}}">
                 <div class="panel-body">
                   {{> render component='jobItemsList' id=_id}}
                 </div>
               </div>
             {{/each}}
-
           </div>
         </div>
       </div>
