--- a/client/lib/components/comments/submit_comment/view.html
+++ b/client/lib/components/comments/submit_comment/view.html
@@ -1,6 +1,7 @@
 <template name="submitComment">
   <div class="col-md-12 m-t-md m-b-md">
     <div class="chat-message-form">
+      GOOOOOOSE
       <div class="form-group">
         {{#textareaAutocomplete settings=settings id="msg" name="message" placeholder="Enter Comment" class="form-control message-input"}}
         {{/textareaAutocomplete}}
