--- a/client/views/main_views/invitationAccept.html
+++ b/client/views/main_views/invitationAccept.html
@@ -32,7 +32,7 @@
             <label class="control-label" for="at-field-tel">
               Phone number (Optional)
             </label>
-            <input type="tel" class="form-control" id="at-field-tel" name="tel" placeholder="Tel" autocapitalize="none" autocorrect="off">
+            <input type="text" class="form-control" id="at-field-tel" name="tel" placeholder="Tel" autocapitalize="none" autocorrect="off">
 
             <span class="help-block hide"></span>
           </div>
