--- a/client/lib/components/sales_prediction/sales-row/view.html
+++ b/client/lib/components/sales_prediction/sales-row/view.html
@@ -4,7 +4,7 @@
     {{#each state$weekPrediction}}
       <td>{{this.predictionQuantity}}</td>
       <td>
-          <a href="#" class="actual-qty">
+          <a href="#" class="actual-qty" data-date="{{this.date}}" data-menuId="{{state$menuItem._id}}">
               {{this.actualQuantity}}
           </a>
       </td>
