--- a/client/lib/components/navigations/navigation/view.html
+++ b/client/lib/components/navigations/navigation/view.html
@@ -124,7 +124,7 @@
         </li>
       {{/if}}
 
-      {{#if isOrganizationOwner}}
+      {{#if isManager}}
         <li class="{{isActiveRoute regex='admin'}}">
           <a href="/admin"><i class="fa -o fa-cog"></i> <span class="nav-label">Settings</span> </a>
         </li>
