--- a/client/lib/components/users/list/view.html
+++ b/client/lib/components/users/list/view.html
@@ -8,7 +8,7 @@
             <th>Username</th>
             <th>Type</th>
             <th>Email Address </th>
-            {{#if isAdmin}}
+            {{#if isManager}}
               <th>Action</th>
             {{/if}}
           </tr>
