Fix the merging problems

--- a/client/lib/components/users/profile/profile/view.html
+++ b/client/lib/components/users/profile/profile/view.html
@@ -54,7 +54,7 @@
 
           <h4>Pay rates</h4>  
           <p>Weekdays ($): 
-          {{#if isAdmin}}
+          {{#if isManager}}
             <a href="#" id="weekdaysrate" data-id="{{state$basic._id}}" class="editable">{{state$basic.profile.payrates.weekdays}}</a>
           {{else}}
             {{#if state$basic.profile.payrates.weekdays}}
@@ -65,7 +65,7 @@
           {{/if}}
           </p>
           <p>Saturday ($): 
-           {{#if isAdmin}}
+           {{#if isManager}}
             <a href="#" id="saturdayrate" data-id="{{state$basic._id}}" class="editable">{{state$basic.profile.payrates.saturday}}</a>
             {{else}}
               {{#if state$basic.profile.payrates.saturday}}
@@ -76,7 +76,7 @@
             {{/if}}
           </p>
           <p>Sunday ($):  
-           {{#if isAdmin}}
+           {{#if isManager}}
             <a href="#" id="sundayrate" data-id="{{state$basic._id}}" class="editable">{{state$basic.profile.payrates.sunday}}</a>
             {{else}} 
               {{#if state$basic.profile.payrates.sunday}}
@@ -90,7 +90,7 @@
           <br>
 
           <h4>No. of shifts per week</h4>             
-          {{#if isAdmin}}
+          {{#if isManager}}
             <select class="form-control shiftsPerWeek" data-id="{{state$basic._id}}">
             {{#each state$shiftsPerWeek}}
               <option selected="{{this.selected}}">{{this.shift}}</option>
@@ -104,7 +104,7 @@
             {{/if}}
           {{/if}}
 
-          {{#if isAdmin}}
+          {{#if isManager}}
             {{#if isMe state$id}}
                 {{#if state$hasResignDate}}
                     <br />
