created totalSalesRow and replaced sales row in roster and forecast with it

--- a/client/lib/components/roster/weekly/top/weekly_figures/view.html
+++ b/client/lib/components/roster/weekly/top/weekly_figures/view.html
@@ -32,12 +32,13 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td>Sales</td>
-              {{#each state$week}}
-                {{> render component="salesTr" day=this}}
-              {{/each}}
-            </tr>
+            <!--<tr>-->
+              <!--<td>Sales</td>-->
+              <!--{{#each state$week}}-->
+                <!--{{> render component="salesTr" day=this}}-->
+              <!--{{/each}}-->
+            <!--</tr>-->
+            {{>render component="totalSalesRow"}}
             <tr>
               <td>Staff Cost ($)</td>
               {{#each state$week}}
