--- a/client/views/main_views/home.html
+++ b/client/views/main_views/home.html
@@ -3,12 +3,12 @@
     {{#if isInOrganization}}
       {{#if getCurrentArea}}
         <div class="row">
-            <div class="col-md-7">
-              <div class="ibox float-e-margins">
+          <div class="col-md-7">
+            <div class="ibox float-e-margins">
               {{> render component="clock"}}
               {{> render component="newsFeed" user=currentUser}}
-              </div>
             </div>
+          </div>
           <div class="col-md-5">
             <div class="ibox float-e-margins">
               {{> render component="shiftsSummary"}}
@@ -24,10 +24,22 @@
         <div class="col-lg-12">
           <hr>
           <div class="jumbotron">
-            <h1>Welcome to Hospo Hero.</h1>
+            <h1>Welcome to Hospo Hero</h1>
+
             <p>
-              Thanks for coming. Please, choose your area in the top menu first.
+              Thanks for coming. Please, choose your area{{#if isOrganizationOwner}} or create a new one{{/if}} in the
+              top menu first
             </p>
+
+            <p>
+              To choose the area, click on the <i class="fa fa-sitemap"></i> icon and then click on area's name
+            </p>
+            {{#if isOrganizationOwner}}
+              <p>
+                To create new area or location, click on the <i class="fa fa-sitemap"></i> icon and then click on <i
+                class="fa fa-plus"></i> icon
+              </p>
+            {{/if}}
           </div>
         </div>
       {{/if}}
@@ -36,15 +48,18 @@
         <hr>
         <div class="jumbotron">
           <h1>Welcome to Hospo Hero.</h1>
+
           <p>
             Thanks for coming. Kitchen's are complicated workplaces. Hospo Hero aims to make
             running a busy kitchen easy. Taking a lot of the manual tasks and making them quick, easy and
             accurate.
           </p>
+
           <p>
             We'll be developing this software over the coming months to help with things like ordering, knowing
             how much to prep, rostering and much more.
           </p>
+
           <p>All ideas are welcome! -Tom</p>
         </div>
       </div>
