--- a/client/lib/components/navigations/heading/area_chooser/view.html
+++ b/client/lib/components/navigations/heading/area_chooser/view.html
@@ -1,11 +1,30 @@
 <template name="areaChooser">
-  <select id="areaChooser">
-    {{#each state$areas}}
-      {{#if equal _id getCurrentAreaId}}
-        <option value="{{_id}}" selected="selected">{{name}}</option>
-      {{else}}
-        <option value="{{_id}}">{{name}}</option>
-      {{/if}}
-    {{/each}}
-  </select>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <form>
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+            aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title">Choose area</h4>
+        </div>
+        <div class="modal-body">
+          <div class="form-group">
+            <select name="areaId" class="form-control">
+              {{#each state$areas}}
+                {{#if equal _id getCurrentAreaId}}
+                  <option value="{{_id}}" selected="selected">{{name}}</option>
+                {{else}}
+                  <option value="{{_id}}">{{name}}</option>
+                {{/if}}
+              {{/each}}
+            </select>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="submit" class="btn btn-primary">OK</button>
+        </div>
+      </form>
+    </div>
+  </div>
 </template>
