--- a/client/lib/components/roster/weekly/top/weekly_figures/view.html
+++ b/client/lib/components/roster/weekly/top/weekly_figures/view.html
@@ -1,7 +1,7 @@
 <template name="weeklyFigures">
   <div class="collapse" id="collapse">
     <div class="row">
-      {{> render component="figureBox" name="Sales" type="sales" subtext="Forecast" dataContent="The figure shows the actual sales result from the days in the past plus the forecast sales for the rest of the week. So you can see if you're on track."}}
+      {{>render component="salesFigureBox"}}
 
       {{> render component="figureBox" name="Staff Cost" type="staffCost" subtext="Rostered" dataContent="The figure shows the actual staff cost result from the days in the past plus the forecast staff cost for the rest of the week. So you can see if you're on track."}}
 
@@ -32,12 +32,6 @@
             </tr>
           </thead>
           <tbody>
-            <!--<tr>-->
-              <!--<td>Sales</td>-->
-              <!--{{#each state$week}}-->
-                <!--{{> render component="salesTr" day=this}}-->
-              <!--{{/each}}-->
-            <!--</tr>-->
             {{>render component="totalSalesRow"}}
             <tr>
               <td>Staff Cost ($)</td>
