Changing suppliers menu category from Settings to Stocks

--- a/client/views/main_views/supplier/profile.html
+++ b/client/views/main_views/supplier/profile.html
@@ -1,5 +1,5 @@
 <template name="supplierProfileMainView">
-  {{> render component="pageHeading" title=name category="Settings"}}
+  {{> render component="pageHeading" title=name category="Stocks"}}
   <div class="wrapper wrapper-content">
     <div class="row animated">
       {{> render component="supplierProfile"}}
