--- a/client/lib/components/navigations/heading/view.html
+++ b/client/lib/components/navigations/heading/view.html
@@ -215,6 +215,14 @@
             </ul>
           </div>
         </div>
+
+        {{#if canEditJob}}
+          <!--AREA CHOOSER-->
+          <div class="modal fade" id="areaChooser" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            {{> render component = 'areaChooser' onAreaSelected=state$onAreaSelected}}
+          </div>
+          <!--AREA CHOOSER-->
+        {{/if}}
       {{/if}}
 
       {{#if state$isJobsList}}
