username changed into full name

--- a/client/lib/components/comments/comment/view.html
+++ b/client/lib/components/comments/comment/view.html
@@ -1,8 +1,8 @@
 <template name="comment">
   <div class="chat-message">
-    <img class="message-avatar" src="{{state$profilePicture}}" alt="">
+    <img class="message-avatar" src="{{state$profileImage}}" alt="">
     <div class="message">
-      <a class="message-author" href="#">{{state$name}}</a>
+      <a class="message-author" href="#">{{username state$createdBy}}</a>
       <span class="message-date">{{timeFormattedWithDate state$createdOn}}</span>
       <span class="message-content">{{{state$text}}}</span>
     </div>
