Fixing some merging bugs

--- a/client/views/layouts/main.html
+++ b/client/views/layouts/main.html
@@ -47,9 +47,9 @@
   <!-- /JOB ITEMS LIST -->  
 
   <!-- SHOW MENUS LIST -->
-  <div class="modal fade" id="showMenusList" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    {{> render component = 'showMenusList'}}
-  </div>
+  <!--<div class="modal fade" id="showMenusList" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">-->
+    <!--{{> render component = 'showMenusList'}}-->
+  <!--</div>-->
   <!-- /SHOW MENUS LIST  -->
 
   <!-- SUBMIT SHIFT -->
