--- a/client/lib/components/organizations/locations/create_location/view.html
+++ b/client/lib/components/organizations/locations/create_location/view.html
@@ -6,12 +6,24 @@
         <input type="text" class="form-control" name="name" required="required">
       </div>
     </div>
-    <div class="form-group">
-      <label class="col-sm-2 control-label">Address</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control" name="address" required="required">
+      <div class="form-group">
+          <label class="col-sm-2 control-label">Country</label>
+          <div class="col-sm-10">
+              {{> render component='selectComponent' values=countries selected='Australia' name='country'}}
+          </div>
       </div>
-    </div>
+      <div class="form-group">
+          <label class="col-sm-2 control-label">City</label>
+          <div class="col-sm-10">
+              <input type="text" class="form-control" name="city" required="required">
+          </div>
+      </div>
+      <div class="form-group">
+          <label class="col-sm-2 control-label">Address</label>
+          <div class="col-sm-10">
+              <input type="text" class="form-control" name="address" required="required">
+          </div>
+      </div>
     <div class="form-group">
       <label class="col-sm-2 control-label">Timezone</label>
       <div class="col-sm-10">
