--- a/client/lib/components/organizations/locations/create_location/view.html
+++ b/client/lib/components/organizations/locations/create_location/view.html
@@ -24,6 +24,7 @@
               <input type="text" class="form-control" name="address" required="required">
           </div>
       </div>
+
     <div class="form-group">
       <label class="col-sm-2 control-label">Timezone</label>
       <div class="col-sm-10">
@@ -48,6 +49,29 @@
         {{> render component='selectComponent' values=minutes selected=null name='closingMinutes'}}
       </div>
     </div>
+      <div class="panel panel-default">
+          <div class="panel-heading text-center"><b>POS Settings (optional)</b></div>
+          <div class="panel-body">
+              <div class="form-group">
+                  <label class="col-sm-2 control-label">Host</label>
+                  <div class="col-sm-10">
+                      <input type="text" class="form-control" name="posHost">
+                  </div>
+              </div>
+              <div class="form-group">
+                  <label class="col-sm-2 control-label">Key</label>
+                  <div class="col-sm-10">
+                      <input type="text" class="form-control" name="posKey">
+                  </div>
+              </div>
+              <div class="form-group">
+                  <label class="col-sm-2 control-label">Secret</label>
+                  <div class="col-sm-10">
+                      <input type="text" class="form-control" name="posSecret">
+                  </div>
+              </div>
+          </div>
+      </div>
     <div class="form-group">
       <label class="col-sm-2 control-label">Status</label>
       <div class="col-sm-10 col-xs-12">
