Fixing bugs in displaying some pages

--- a/client/lib/components/navigations/top/view.html
+++ b/client/lib/components/navigations/top/view.html
@@ -46,7 +46,7 @@
               <a href="#" class="theme-config-close-btn" data-id="profileFlyoutLinks">
                 <i class="fa fa-angle-right"></i>
               </a>
-              {{username}}
+              {{username currentUser._id}}
             </div>
             <div class="ibox float-e-margins" style="margin-bottom: 0;">
               <div class="ibox-content" style="padding-bottom: 10px;">
