--- a/client/lib/components/organizations/organization_structure/view.html
+++ b/client/lib/components/organizations/organization_structure/view.html
@@ -141,7 +141,7 @@
             <div class="ibox float-e-margins" style="margin-bottom: 0;">
               <div class="ibox-content" style="padding-bottom: 10px;">
                 <div class="feed-activity-list">
-                  {{>render component='areaSettings' organizationId=state$organization._id locationId=state$location areaId=state$area}}
+                  {{>render component='areaSettings' organizationId=state$organization._id areaId=state$area}}
                 </div>
               </div>
             </div>
