Fixing bug with navigation menu

--- a/client/lib/components/navigations/navigation/view.html
+++ b/client/lib/components/navigations/navigation/view.html
@@ -17,7 +17,7 @@
           </li>
 
           {{#if isInOrganization}}
-            {{#if getCurrentArea}}
+            {{#if getCurrentAreaId}}
               {{#if canViewForecast}}
                 <li class="{{isActiveRoute regex='salesPrediction'}}">
                   <a href="{{pathFor "salesPrediction" year=year week=week}}">
