--- a/client/lib/components/cron/view.html
+++ b/client/lib/components/cron/view.html
@@ -1,5 +1,5 @@
 <template name="cronConfig">
-  <div class="ibox-content">
+  <div class="panel-body">
     <div class="row">
       <div class="col-lg-12">
         <div class="row">
