--- a/client/lib/components/users/list/view.html
+++ b/client/lib/components/users/list/view.html
@@ -1,5 +1,5 @@
 <template name="usersList">
-  <div class="ibox-content">
+  <div class="panel-body">
     <br>
     <div class="table-responsive">
       <table class="table table-striped">
