--- a/client/views/main_views/admin/list.html
+++ b/client/views/main_views/admin/list.html
@@ -27,6 +27,9 @@
             <li class="">
               <a href="#revel-link" data-toggle="tab">POS/ Menu Linking</a>
             </li>
+            <li class="">
+                <a href="#archiving" data-toggle="tab">Locations/Areas archiving</a>
+            </li>
           </ul>
 
           <div class="tab-content">
@@ -50,6 +53,9 @@
             </div>
             <div class="tab-pane" id="revel-link">
               {{> render component='revelMenuLink'}}
+            </div>
+            <div class="tab-pane" id="archiving">
+              {{> render component="locationAreaArchiving"}}
             </div>
           </div>
         </div>
