--- a/client/lib/components/organizations/locations/location_settings/view.html
+++ b/client/lib/components/organizations/locations/location_settings/view.html
@@ -7,9 +7,5 @@
 
   <button class="btn btn-primary col-xs-12 open-flyout" data-id="createArea" data-location-id="{{state$locationId}}">Create Area</button>
 
-  {{#if isOrganizationOwner}}
-    <button class="btn btn-danger col-xs-12 delete-location" data-id="{{state$locationId}}">Delete Location</button>
-  {{else}}
-    <h1>{{state$location.name}}</h1>
-  {{/if}}
+  {{> render component="editLocation" location=state$location}}
 </template>
