forgot to add changes :D

--- a/client/lib/components/menuitems/prep_or_stock/quantity/view.html
+++ b/client/lib/components/menuitems/prep_or_stock/quantity/view.html
@@ -1,3 +1,3 @@
 <template name="quantity">
-  <a href="#" class="quantity" data-type="text" data-pk="{{state$item.id}}" data-url="/post" data-title="Enter quantity" data-itemtype="{{state$item.type}}">{{state$quantity}}</a>
+  <a href="#" class="quantity" data-url="/post">{{state$quantity}}</a>
 </template>
