--- a/client/lib/components/stock/edit/view.html
+++ b/client/lib/components/stock/edit/view.html
@@ -50,16 +50,7 @@
             <label class="col-sm-4 control-label">Portion Ordered (b)</label>
             <div class="col-sm-6">
               {{#if canEditStock}}
-              <select name="portionOrdered" class="form-control">
-                {{#if item.portionOrdered}}
-                  <option selected="selected">{{item.portionOrdered}}</option>
-                {{else}}
-                  <option selected="selected">Select</option>
-                {{/if}}
-                {{#each state$unitsOrdered}}
-                  <option>{{unit}}</option>
-                {{/each}}
-              </select>
+                <input type="text" name="portionOrdered" placeholder="Type a unit" class="form-control" value="{{item.portionOrdered}}"/>
               {{else}}
                 {{#if item.portionOrdered}}
                   <div class="form-control">{{item.portionOrdered}}</div>
@@ -86,16 +77,7 @@
             <label class="col-sm-4 control-label">Portion Used</label>
             <div class="col-sm-6 ">
               {{#if canEditStock}}
-              <select name="portionUsed" class="form-control">
-                {{#if item.portionUsed}}
-                  <option selected="selected">{{item.portionUsed}}</option>
-                {{else}}
-                  <option selected="selected">Select a unit</option>
-                {{/if}}
-                {{#each state$unitsUsed}}
-                  <option>{{unit}}</option>
-                {{/each}}
-              </select>
+                <input type="text" name="portionUsed" placeholder="Type a unit" class="form-control" value="{{item.portionUsed}}"/>
               {{else}}
                 {{#if item.portionUsed}}
                   <div class="form-control">{{item.portionUsed}}</div>
