--- a/client/lib/components/stock/submit/view.html
+++ b/client/lib/components/stock/submit/view.html
@@ -33,12 +33,13 @@
           <div class="form-group">
             <label class="col-sm-4 control-label">Portion Ordered (b)</label>
             <div class="col-sm-6">
-              <select name="portionOrdered" class="form-control">
-                <option value="">Select a unit</option>
-                {{#each state$unitsOrdered}}
-                  <option>{{unit}}</option>
-                {{/each}}
-              </select>
+              <input type="text" name="portionOrdered" class="form-control" placeholder="Type a unit"/>
+              <!--<select name="portionOrdered" class="form-control">-->
+                <!--<option value="">Select a unit</option>-->
+                <!--{{#each state$unitsOrdered}}-->
+                  <!--<option>{{unit}}</option>-->
+                <!--{{/each}}-->
+              <!--</select>-->
             </div>
           </div>
           <div class="form-group">
@@ -53,12 +54,13 @@
           <div class="form-group">
             <label class="col-sm-4 control-label">Portion Used (a)</label>
             <div class="col-sm-6 ">
-              <select name="portionUsed" class="form-control">
-                <option value="">Select a unit</option>
-                {{#each state$unitsUsed}}
-                <option>{{unit}}</option>
-                {{/each}}
-              </select>
+              <input type="text" name="portionUsed" placeholder="Type a unit" class="form-control"/>
+              <!--<select name="portionUsed" class="form-control">-->
+                <!--<option value="">Select a unit</option>-->
+                <!--{{#each state$unitsUsed}}-->
+                <!--<option>{{unit}}</option>-->
+                <!--{{/each}}-->
+              <!--</select>-->
             </div>
           </div>
           <div class="form-group">
