Fixing some bugs

--- a/client/lib/components/stock/edit/view.html
+++ b/client/lib/components/stock/edit/view.html
@@ -5,7 +5,7 @@
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
         <h4 class="modal-title" id="myModalLabel">{{#if canEditStock}} Edit {{/if}} Stocks</h4>
       </div>
-      <form class="form-horizontal" role="form" data-id="{{state$id}}">
+      <form class="form-horizontal" role="form">
         <div class="modal-body">
           <div class="form-group">
             <label class="col-sm-4 control-label">Supplier's Code</label>
